2005-11-04  Sven Neumann  <sven@gimp.org>

	* Made 2.3.5 development release.

2005-11-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpcontrollereditor.c (gimp_controller_editor_init):
	set the widget's spacing to 12 pixels.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/actions/Makefile.am (libappactions_a_SOURCES): fixed typo.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/base/siox.c: applied a patch by Gerald Friedland that
	changes the code to clear the cache selectively instead of dumping
	it completely if the foreground or background area is changed.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/core/gimpenvirontable.c (gimp_environ_table_load_env_file):
	gimp_config_path_expand() only ever returns NULL if called with a
	NULL path argument.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/config/gimpconfig-dump.c: fixed typo.

2005-11-04  Sven Neumann  <sven@gimp.org>

	* app/errors.c
	* app/sanity.c: s/The GIMP/GIMP/

2005-11-03  Sven Neumann  <sven@gimp.org>

	* app/gui/splash.c: set the splash image as back pixmap.

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpaction.c
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcontainerbox.c
	* app/widgets/gimpcontrollerlist.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimppluginaction.c
	* app/widgets/gimptooloptionseditor.c
	* app/widgets/gimpwidgets-utils.c
	* libgimpwidgets/gimpcellrenderercolor.c: use gtk_widget_get_settings()
	instead of gtk_settings_get_for_screen(gtk_widget_get_screen())

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpclipboard.c (gimp_clipboard_set_text): added
	g_return_if_fail (GIMP_IS_GIMP (gimp)).

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/text/gimptext.c: code cleanup, untabified.

2005-11-02  Michael Natterer  <mitch@gimp.org>

	* app/actions/data-commands.c
	* app/core/gimpprogress.c: #include "gimp.h" instead of "gimp-gui.h"

2005-11-02  Sven Neumann  <sven@gimp.org>
