@@ -1,3 +1,8 @@
+2005-11-04  Manish Singh  <yosh@gimp.org>
+
+	* app/core/gimpenvirontable.c (gimp_environ_table_load_env_file):
+	remove now unused "expanded" variable.
+
 2005-11-04  Sven Neumann  <sven@gimp.org>
 
 	* Made 2.3.5 development release.
